AM_CPPFLAGS = 	-I$(top_srcdir)/aslib

lib_LIBRARIES = libasds.a

libasds_a_SOURCES = asd_array.c asd_btree.c asd_list.c asd_fifo.c asd_map.c asd_string.c asd_stream.c asd_tree.c

include_HEADERS = asd_array.h asd_btree.h asd_fifo.h asd_inc.h asd_list.h asd_map.h asd_string.h asd_stream.h asd_tree.h
