AM_CPPFLAGS = 	-I$(top_srcdir)/aslib -I$(top_srcdir)/asdatastructure

lib_LIBRARIES = libasfw.a

libasfw_a_SOURCES = asf_cmd_phase.c asf_ctrl.c asf_ctrl_intf_shell.c asf_ctrl_intf_telnet.c asf_event.c asf_mem_manager.c asf_mem_pool.c asf_net_core.c asf_thread_pool.c asf_timer.c

include_HEADERS = asf_cmd_phase.h asf_ctrl.h asf_event.h asf_mem_manager.h asf_mem_pool.h asf_net_core.h asf_thread_pool.h asf_timer.h
