lib_LIBRARIES = libaslib.a

libaslib_a_SOURCES = asl_bitope.c asl_cli.c asl_file.c asl_ipv4.c asl_math.c asl_memory.c asl_net.c asl_netlink.c asl_stdio.c asl_string.c asl_syscmd.c asl_tcp.c asl_thread.c asl_time.c asl_timer.c asl_udp.c asl_unix.c asl_xml.c

include_HEADERS = asl_bitope.h asl_cli.h asl_file.h asl_inc.h asl_ipv4.h asl_math.h asl_memory.h asl_net.h asl_netlink.h asl_stdio.h asl_string.h asl_struct.h asl_syscmd.h asl_tcp.h asl_thread.h asl_time.h asl_timer.h asl_type.h asl_udp.h asl_unix.h asl_xml.h